# coffee_stain

./: .gitattributes  .gitignore  Cargo.toml  README.md  flake.nix
src/: code.rs  diff.rs  lib.rs  main.rs  message.rs  parser.rs  test_data.rs
