[package]
name = "coffee_stain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
difference = "2.0.0"
itertools = "0.13.0"
nom = "7.1.3"

[dev-dependencies]
pretty_assertions = "1.4"
